# physical-ai-studio

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  PhysicalAI-Studio-Strategy.md  README.md  benchmark.csv  benchmark_findings_report.md  benchmark_ov_conversion.py  benchmark_results.json  benchmark_results_torch210.json  benchmark_results_torch212.json  config-options.md  config.md  nested-config-flat-access.md  pyproject.toml
.github/: CODEOWNERS  (+6 more)
application/backend/: .gitignore  .pre-commit-config.yaml  MIGRATIONS.md  README.md  pyproject.toml  run.sh
application/backend/docs/: distribution.md  video_hardware_acceleration_intel.md
application/backend/scripts/: build_package.sh  check_alembic_heads.sh  hatch_build.py
application/backend/src/: alembic.ini  cli.py  exception_handlers.py  exceptions.py  main.py  settings.py  storage_migration.py
application/backend/src/alembic/versions/: 35da80a6d570_remove_projectconfig.py  679bf09bd098_adds_snapshots.py  9b2617a3adba_add_train_job_id.py  a1b2c3d4e5f6_robot_payload_json_column.py  (+5 more)
application/backend/src/api/: camera.py  dataset.py  dataset_import.py  dependencies.py  hardware.py  job.py  models.py  policies.py  project.py  project_camera.py  record.py  robot_catalog.py  robot_control.py  robot_setup.py  system.py  utils.py  webui.py
application/backend/src/cli/: __init__.py  __main__.py  database.py  models.py  serve.py
application/backend/src/control/: environment_integration.py  sync_mixed_model_integration.py
application/backend/src/core/: lifecycle.py  scheduler.py
application/backend/src/db/: __init__.py  migration.py  schema.py
application/backend/src/internal_datasets/: dataset_client.py  utils.py
application/backend/src/models/: utils.py
application/backend/src/repositories/: base.py  job_repo.py  project_environment_repo.py
application/backend/src/robots/: physicalai_adapter.py  robot_client.py  robot_client_factory.py  robot_service.py
application/backend/src/schemas/: __init__.py  base_job.py  calibration.py  camera.py  dataset.py  dataset_import_job.py  hardware.py  job.py  model.py  project.py  project_camera.py  robot.py
application/backend/src/services/: __init__.py  archive_safety.py  dataset_download_service.py  dataset_service.py  job_service.py  log_service.py  model_download_service.py  model_metrics_service.py  model_service.py  robot_calibration_service.py  system_service.py  training_service.py
application/backend/src/utils/: async_camera_capture.py  calibration.py  camera_factory.py  dataset.py  device.py  jpeg.py  multiprocessing.py  serial_robot_tools.py  trossen_robot_tools.py
application/backend/src/workers/: base.py  camera_worker.py  camera_worker_registry.py  dataset_import_worker.py  inference_worker.py  model_worker.py  model_worker_registry.py  robot_control_worker.py  teleoperate_worker.py  training_worker.py  transport_worker.py
application/backend/tests/: conftest.py  test_dataset_path_migration.py  test_settings.py  test_storage_migration.py
application/backend/tests/api/: test_dataset_download.py  test_dataset_import_upload_safety.py  test_dataset_management.py  test_hardware.py  test_record.py  test_robot_calibration.py  test_robot_catalog.py  test_utils.py
application/backend/tests/cli/: test_serve.py
application/backend/tests/control/: test_environment_integration.py
application/backend/tests/models/: test_model_schema.py  test_utils.py
application/backend/tests/repositories/: test_base_repository.py
application/backend/tests/robots/: test_bimanual_widowxai_adapter.py  test_catalog_assets.py  test_robot_adapter.py  test_widowxai_adapter.py
application/backend/tests/schemas/: test_dataset.py
application/backend/tests/services/: test_archive_safety.py  test_log_service.py  test_model_service.py  test_system_service.py  test_training_service.py
application/backend/tests/workers/: test_camera_worker.py  test_model_worker.py  test_model_worker_registry.py  test_robot_control_worker.py  test_teleoperate_worker.py  test_training_worker.py
physicalai/: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
physicalai/docs/: README.md
physicalai/docs/.troubleshooting/: so101-serial-issues.md
physicalai/docs/design/: README.md
physicalai/docs/design/architecture/: architecture.md  configuration-system.md  packaging-strategy-analysis.md  robot_stack_vision.md  strategy.md
physicalai/docs/design/components/: benchmarking.md  camera-interface-presentation.md  camera-interface.md  inferencekit.md  observation.md  robot-interface-presentation.md  robot-interface.md
physicalai/docs/design/integrations/: lerobot.md
physicalai/docs/design/packaging/: modular-packages-in-one-repo.md  physical-ai-two-repo-options.md
physicalai/examples/capture/: basler.ipynb  read_uvc_camera.py  realsense.ipynb  test_v4l2_controls_with_omnicamera.py
physicalai/examples/capture/nokhwa_probe/: Cargo.toml
physicalai/examples/so101/: README.md  move_joints.py  read_joints.py
physicalai/src/physicalai/capture/: __init__.py  camera.py  discovery.py  errors.py  factory.py  frame.py  multi.py
physicalai/src/physicalai/inference/: README.md  __init__.py  component_factory.py  manifest.py  model.py
physicalai/src/physicalai/robot/: __init__.py  connect.py  interface.py  verify.py
physicalai/src/physicalai/runtime/: __init__.py  action_queue.py  callbacks.py  controller.py  execution.py  factory.py  fallback.py  policy_controller.py  runtime.py  safety.py
physicalai/tests/unit/capture/: conftest.py  fake.py  test_basler.py  test_factory.py  test_fake_camera.py  test_frame.py  test_omnicamera.py  test_realsense.py  test_sync.py  test_v4l2_camera.py  test_v4l2_discover.py
physicalai/tests/unit/inference/: test_action_cursor.py  test_adapters.py  test_callbacks.py  test_manifest.py  test_model.py
physicalai/tests/unit/robot/: test_protocol.py  test_so101.py  test_utils.py  test_verify_robot.py  test_widowxai.py
physicalai/tests/unit/runtime/: test_runtime.py
(+458 files in other folders)
