[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physicalai"
version = "0.1.0"
requires-python = ">=3.12"
description = "Lightweight runtime for physical AI inference"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Intel Open Edge Platform" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "loguru>=0.7",
    # target PyTurboJPEG 1.x for libjpeg-turbo 2.x compatibility
    "PyTurboJPEG<2; sys_platform == 'linux'",
    "omni_camera @ git+https://github.com/ArendJanKramer/OmniCamera.git@master",
    "pydantic>=2.5",
]

[project.optional-dependencies]
tests = ["pytest", "mypy"]
realsense = []
basler = []
genicam = []
capture = [
    "physicalai[realsense]",
    "physicalai[basler]",
    "physicalai[genicam]",
]
ur = []
abb = []
franka = []
trossen = []
so101 = ["feetech-servo-sdk"]
robots = [
    "physicalai[ur]",
    "physicalai[abb]",
    "physicalai[franka]",
    "physicalai[trossen]",
    "physicalai[so101]",
]

[dependency-groups]
dev = ["pytest", "mypy", "pyrefly", "ruff", "prek"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/openvinotoolkit/physical-ai"
Documentation = "https://github.com/openvinotoolkit/physical-ai"
Repository = "https://github.com/openvinotoolkit/physical-ai"
Issues = "https://github.com/openvinotoolkit/physical-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/physicalai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/physicalai/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "docs/**",
    "examples/**",
]

[tool.pyrefly]
python-version = "3.12"
ignore-missing-imports = ["*"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 120
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "notebooks",
]
src = ["src", "tests"]
extend-exclude = ["docs", "examples", "tests", "notebooks"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Conflicts with Ruff formatter
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-copyright]
notice-rgx = '# Copyright \(C\) (\d{4}(-\d{4})?) Intel Corporation\n# SPDX-License-Identifier: Apache-2\.0'

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

[tool.markdownlint]
default = true

[tool.markdownlint.MD001]
enabled = true

[tool.markdownlint.MD013]
line_length = 1000

[tool.markdownlint.MD024]
allow_different_nesting = true
siblings_only = true

[tool.markdownlint.MD033]
enabled = false

[tool.markdownlint.MD034]
enabled = false

[tool.markdownlint.MD036]
enabled = false

[tool.markdownlint.MD041]
enabled = false

[tool.markdownlint.MD042]
enabled = false

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "--showlocals", "-ra"]
testpaths = "tests"
pythonpath = "src"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_download: marks tests that require downloading external datasets",
    "integration: marks tests as integration tests",
    "v4l2: marks tests requiring V4L2 mocking (Linux only)",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "pass",
    "raise ImportError",
    "raise ValueError",
    "except ImportError:",
]

[tool.coverage.paths]
source = ["src"]
